--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "gulp-protractor": "^4.1.1",
     "gulp-rename": "^1.4.0",
     "gulp-watch": "^5.0.1",
+    "gulp-yaml": "^2.0.3",
     "htmlhint": "^0.11.0",
     "jasmine-core": "^3.2.1",
     "karma": "^4.0.1",
