--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aurelia-templating-binding": "^1.5.3",
     "aurelia-templating-resources": "^1.9.1",
     "aurelia-templating-router": "^1.3.3",
+    "aurelia-validation": "^1.4.0",
     "i18next-xhr-backend": "^2.0.1",
     "izitoast": "^1.4.0",
     "moment": "^2.24.0",
