--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aurelia-history": "^1.2.1",
     "aurelia-history-browser": "^1.3.1",
     "aurelia-i18n": "^3.0.0-beta.5",
+    "aurelia-kis-oidc": "^1.2.0",
     "aurelia-loader": "^1.0.2",
     "aurelia-loader-default": "^1.2.1",
     "aurelia-logging": "^1.5.2",
