--- a/wwwroot/config/config.json
+++ b/wwwroot/config/config.json
@@ -1,13 +1,10 @@
 {
   "authentication": {
+    "enable": true,
     "redirectHost": "https://web.lvh.me",
-    "tenantId": "b2abb46d-ac1e-4ba2-8d1f-1392172ab76c",
-    "tenantName": "kisssb2c",
-    "clientId": "3383e366-290d-49ab-8c8c-1a13f64c2eda",
-    "apiScope": "https://kisssb2c.onmicrosoft.com/extranet/user_impersonation",
-    "b2cPolicy": "b2c_1_autoprovisioning"
+    "identityUrl": "https://kisssb2c.b2clogin.com/tfp/kisssb2c.onmicrosoft.com/b2c_1_connection/v2.0",
+    "clientId": "0e0afdc5-ce90-4f97-b545-7d8d0d032425",
+    "apiScope": "https://kisssb2c.onmicrosoft.com/kis-minutes-web-DEV/minute.write"
   },
-  "api": {
-    "uri": "https://api.ffw-mission.org"
-  }
+  "api": { "uri": "https://api.ffw-mission.org" }
 }
